# Bridge

./: CHANGELOG.md  README.md  bridge.cabal  cabal.project.local
app/: Main.hs
