cabal-version:      2.4
name:               bridge
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Guilherme Belmonte
maintainer:         contact@belmonte.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable bridge
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        GHC2021
        NoFieldSelectors
        OverloadedRecordDot
    build-depends:    base
                      , gloss
                      , linear
                      , containers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -Wincomplete-uni-patterns
